# task4.3

./: .gitignore  CMakeLists.txt  README.txt  sample.txt  task.txt
app/: CMakeLists.txt
app/src/: main.c
lib/: CMakeLists.txt
lib/include/: lib_main.h
lib/src/: lib_main.c
